Bug 1468183 - Support a subset of SVG color matrix filters in WebRender. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D10057