layout/svg/nsFilterInstance.cpp
@@ -151,6 +151,9 @@ nsFilterInstance::BuildWebRenderFilters(nsIFrame* aFilteredFrame,
   bool filterIsAffectedByPrimSubregion = false;
 
   for (const auto& primitive : instance.mFilterDescription.mPrimitives) {
+    chainIsAffectedByPrimSubregion |= filterIsAffectedByPrimSubregion;
+    filterIsAffectedByPrimSubregion = false;
+
     bool primIsSrgb = primitive.OutputColorSpace() == gfx::ColorSpace::SRGB;
     if (srgb && !primIsSrgb) {
       wr::WrFilterOp filterOp = { wr::WrFilterOpType::SrgbToLinear };
@@ -188,6 +191,41 @@ nsFilterInstance::BuildWebRenderFilters(nsIFrame* aFilteredFrame,
     if (attr.is<OpacityAttributes>()) {
       float opacity = attr.as<OpacityAttributes>().mOpacity;
       wr::WrFilterOp filterOp = { wr::WrFilterOpType::Opacity, opacity };
+      aWrFilters.AppendElement(filterOp);
+    } else if (attr.is<ColorMatrixAttributes>()) {
+      const ColorMatrixAttributes& attributes = attr.as<ColorMatrixAttributes>();
+
+      float transposed[20];
+      if (!gfx::ComputeColorMatrix(attributes, transposed)) {
+        filterIsNoop = true;
+        continue;
+      }
+
+      auto almostEq = [](float a, float b) -> bool { return fabs(a - b) < 0.00001; };
+
+      if (!almostEq(transposed[15], 0.0) ||
+          !almostEq(transposed[16], 0.0) ||
+          !almostEq(transposed[17], 0.0) ||
+          !almostEq(transposed[18], 1.0) ||
+          !almostEq(transposed[3], 0.0) ||
+          !almostEq(transposed[8], 0.0) ||
+          !almostEq(transposed[13], 0.0)) {
+        // WebRender currently pretends to take the full 4x5 matrix but discards
+        // the components related to alpha. So bail out in this case until
+        // it is fixed.
+        return false;
+      }
+
+      float matrix[20] = {
+        transposed[0], transposed[5], transposed[10], transposed[15],
+        transposed[1], transposed[6], transposed[11], transposed[16],
+        transposed[2], transposed[7], transposed[12], transposed[17],
+        transposed[3], transposed[8], transposed[13], transposed[18],
+        transposed[4], transposed[9], transposed[14], transposed[19]
+      };
+
+      wr::WrFilterOp filterOp = { wr::WrFilterOpType::ColorMatrix };
+      PodCopy(filterOp.matrix, matrix, 20);
       aWrFilters.AppendElement(filterOp);
     } else if (attr.is<GaussianBlurAttributes>()) {
       if (chainIsAffectedByPrimSubregion) {
@@ -252,8 +290,6 @@ nsFilterInstance::BuildWebRenderFilters(nsIFrame* aFilteredFrame,
       Unused << aWrFilters.PopLastElement();
       srgb = !srgb;
     }
-
-    chainIsAffectedByPrimSubregion |= filterIsAffectedByPrimSubregion;
   }
 
   if (!srgb) {
